@@ -31,8 +31,6 @@ import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableList;
-
 import io.wcm.devops.conga.generator.spi.FileHeaderPlugin;
 import io.wcm.devops.conga.generator.spi.context.FileContext;
 import io.wcm.devops.conga.generator.spi.context.FileHeaderContext;
@@ -55,7 +53,7 @@ class OsgiConfigFileHeaderTest {
     File file = new File("target/generation-test/fileHeader.config");
     FileUtils.write(file, "myscript", StandardCharsets.UTF_8);
 
-    List<String> lines = ImmutableList.of("**********", "", "Der Jodelkaiser", "aus dem Oetztal", "ist wieder daheim.", "**********");
+    List<String> lines = List.of("**********", "", "Der Jodelkaiser", "aus dem Oetztal", "ist wieder daheim.", "**********");
     FileHeaderContext context = new FileHeaderContext().commentLines(lines);
 
     FileContext fileContext = new FileContext().file(file);
@@ -66,7 +64,7 @@ class OsgiConfigFileHeaderTest {
         "# Der Jodelkaiser aus dem Oetztal ist wieder daheim."));
 
     FileHeaderContext extractContext = underTest.extract(fileContext);
-    assertEquals(ImmutableList.of("Der Jodelkaiser aus dem Oetztal ist wieder daheim."), extractContext.getCommentLines());
+    assertEquals(List.of("Der Jodelkaiser aus dem Oetztal ist wieder daheim."), extractContext.getCommentLines());
 
     file.delete();
   }
